[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = "<2.0"
sqlalchemy = "^2.0.7"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.25.1"
python-dotenv = "^1.0.0"
pymysql = "^1.1.0"
orjson = "^3.9.10"
requests = "^2.31.0"
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
